# TaiphoneEval

./: .gitignore  LICENSE  README.md  pyproject.toml
result/mt-bench-zhtw/: Llama-3.2-1B-Instruct.json  Llama-3.2-3B-F1-Instruct.json  Llama-3.2-Kyara-1B-it.json  Llama-3.2-Kyara-3B-it.json  Llama-3.2-TaiPhone-1B-Instruct-v0.1.json  Llama-3.2-TaiPhone-3B-Instruct-v0.1.json  Llama3.2-3B-Instruct.json  gpt-4.1-nano.json
scripts/: eval_mcq.py  eval_mt_bench_zhtw.py
